change into vis-ui

--- a/vis-ui/index.html
+++ b/vis-ui/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="bower_components/ng-table/dist/ng-table.css">
 
 </head>
-<body ng-app="ttsApp">
+<body ng-app="visApp">
 
 	<div id="page-content">
 		<div id="wrap" ui-view></div>
@@ -23,11 +23,11 @@
 	<script type="text/javascript" src="bower_components/angular-ui-grid/ui-grid.js"></script>
 	<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 	<script type="text/javascript" src="bower_components/restangular/dist/restangular.js"></script>
-	<script type="text/javascript" src="app.module.js"></script>
-	<script type="text/javascript" src="app.routes.js"></script>
+	<script type="text/javascript" src="vis.module.js"></script>
+	<script type="text/javascript" src="vis.routes.js"></script>
 	<script type="text/javascript" src="components/login/controller/LoginController.js"></script>
 	<script type="text/javascript" src="components/login/service/LoginService.js"></script>
-	<script type="text/javascript" src="components/ticket/controller/TicketController.js"></script>
-	<script type="text/javascript" src="components/ticket/service/TicketService.js"></script>
+	<script type="text/javascript" src="components/vehicle/controller/VehicleController.js"></script>
+	<script type="text/javascript" src="components/vehicle/service/VehicleService.js"></script>
 </body>
 </html>
